[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamin-dataloader"
version = "0.1.0"
description = "data loader and pre-processing for large-scale models based on lamindb"
authors = [
    { name = "Theislab" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lamindb==0.75.0",
]

[project.urls]
Homepage = "https://github.com/theislab/lamin_dataloader"
Repository = "https://github.com/theislab/lamin_dataloader"

[tool.hatch.build.targets.wheel]
packages = ["lamin_dataloader"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 