[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lamin-dataloader"
version = "0.1.0"
description = "data loader and pre-processing for large-scale models based on lamindb"
authors = [
    { name = "Theislab" }
]
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lamindb==1.6.2",
    "pytest>=7.0.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/theislab/lamin_dataloader"
Repository = "https://github.com/theislab/lamin_dataloader"

[tool.hatch.build.targets.wheel]
packages = ["lamin_dataloader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=lamin_dataloader"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 